--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - jaimergp/label/unsupported-cudatoolkit-shim
   - conda-forge
 dependencies:
+  - python >=3.8
   - openff-toolkit >=0.11.0
   - nglview
   - ipywidgets >7,<8  # https://github.com/nglviewer/nglview/issues/1032
