--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,6 @@ channels:
 dependencies:
   - python >=3.8
   - openff-toolkit >=0.11.0
+  - openff-evaluator-base >=0.4.0
   - nglview
   - ipywidgets >7,<8  # https://github.com/nglviewer/nglview/issues/1032
