--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - jaimergp/label/unsupported-cudatoolkit-shim
   - conda-forge
 dependencies:
-  - python >=3.8
+  - python =3.9
   - openff-toolkit >=0.11.0
   - openff-evaluator-base >=0.4.0
   - nglview
