--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,4 @@ dependencies:
   - openff-evaluator-base >=0.4.0
   - nglview
   - ipywidgets >7,<8  # https://github.com/nglviewer/nglview/issues/1032
+  - pytest
